fixes line overlapping date

--- a/sites/all/themes/lezoo/less/events.less
+++ b/sites/all/themes/lezoo/less/events.less
@@ -259,7 +259,6 @@
 				margin-top: 0px;
 				margin-bottom: 0px;
 			}
-			display: inline-block;
 		}
 		.event-subtitle{
 			padding-left: @padding-base-horizontal;
